--- a/index.html
+++ b/index.html
@@ -39,102 +39,7 @@
         padding: 20px;
         margin: 6px;
         border-radius: 10px;
-        background-image: url(https://199z.net/asset/image/gif/118.gif);
-        background-repeat: no-repeat;
-        background-size: auto;
-        background-position: center;
-        background-position-y: 10px;
-        background-color: white;
-        box-shadow: 0 0 13px 1px #ff7373;
-        max-width: 388px;
-        color: #873737;
-      }
-
-      input,
-      select {
-        display: inline-block;
-        margin-bottom: 13px;
-        border: 0;
-        background: #e9e9e9;
-        padding: 10px 13px;
-        border-radius: 4px;
-        outline: none;
-      }
-
-      .buttons {
-        margin-top: 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: row;
-      }
-      .buttons > div {
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        width: 100%;
-      }
-      button {
-        padding: 12px 18px;
-        margin: 0 10px;
-        font-size: 16px;
-        cursor: pointer;
-        background-color: #4caf50;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        transition: transform 1s ease-in-out;
-        text-align: center;
-        border: 1px px solid white;
-        box-shadow: 0 0 19px 9px white;
-      }
-
-      #noBtn {
-        background-color: #120032;
-      }
-      @keyframes multiBlink {
-        0% {
-          color: #ff0000;
-        }
-        20% {
-          color: #ff6600;
-        }
-        40% {
-          color: #ffff00;
-        }
-        60% {
-          color: #00ccff;
-        }
-        80% {
-          color: #00ff00;
-        }
-        100% {
-          color: #ff0000;
-        }
-      }
-
-      h1 {
-        font-size: 36px;
-        text-align: center;
-        margin: 50px 0 20px 0;
-        padding-bottom: 28px;
-        border-bottom: 1px solid;
-        animation: multiBlink 1s infinite;
-      }
-    </style>
-    <title>Lì Xì Nè</title>
-  </head>
-  <body>
-    <div class="container">
-      <center style="display: none">
-        <audio id="myAudio" controls autoplay>
-          <source
-            src="https://archive.org/download/ngay-xuan-long-phung-sum-vay/ngay-xuan-long-phung-sum-vay.mp3"
-          />
-        </audio>
-        <script>
-          var audio = document.getElementById("myAudio");
-          audio.volume = 0.4;
+        backgrou2;
         </script>
       </center>
       <div class="greeting" id="main">
